tests/bindings/swift/phantom_coreFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
void*_Nonnull uniffi_phantom_core_fn_clone_acceptoutcome(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_phantom_core_fn_free_acceptoutcome(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_phantom_core_fn_method_acceptoutcome_has_early_data(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_phantom_core_fn_method_acceptoutcome_session(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_phantom_core_fn_method_acceptoutcome_take_early_data(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_phantom_core_fn_clone_phantomlistener(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_phantom_core_fn_free_phantomlistener(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_phantom_core_fn_constructor_phantomlistener_bind(RustBuffer addr
);
uint64_t uniffi_phantom_core_fn_method_phantomlistener_accept(void*_Nonnull ptr
);
int8_t uniffi_phantom_core_fn_method_phantomlistener_is_shutting_down(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_phantom_core_fn_method_phantomlistener_local_addr(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_phantom_core_fn_method_phantomlistener_metrics_prometheus_text(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_phantom_core_fn_method_phantomlistener_shutdown(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_phantom_core_fn_method_phantomlistener_verifying_key_bytes(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_phantom_core_fn_clone_phantomsession(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_phantom_core_fn_free_phantomsession(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_phantom_core_fn_constructor_phantomsession_connect(RustBuffer peer_addr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_phantom_core_fn_method_phantomsession_connection_state(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_phantom_core_fn_method_phantomsession_early_data_accepted(void*_Nonnull ptr
);
uint64_t uniffi_phantom_core_fn_method_phantomsession_flush_queue(void*_Nonnull ptr
);
RustBuffer uniffi_phantom_core_fn_method_phantomsession_id(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_phantom_core_fn_method_phantomsession_is_data_ready(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_phantom_core_fn_method_phantomsession_is_pqc_ready(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_phantom_core_fn_method_phantomsession_open_stream(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_phantom_core_fn_method_phantomsession_peer_addr(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_phantom_core_fn_method_phantomsession_queued_count(void*_Nonnull ptr
);
uint64_t uniffi_phantom_core_fn_method_phantomsession_recv(void*_Nonnull ptr
);
uint64_t uniffi_phantom_core_fn_method_phantomsession_resumption_hint(void*_Nonnull ptr
);
uint64_t uniffi_phantom_core_fn_method_phantomsession_send(void*_Nonnull ptr, RustBuffer data
);
void uniffi_phantom_core_fn_method_phantomsession_set_state(void*_Nonnull ptr, RustBuffer new_state, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_phantom_core_fn_clone_phantomstream(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_phantom_core_fn_free_phantomstream(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_phantom_core_fn_method_phantomstream_recv(void*_Nonnull ptr
);
uint64_t uniffi_phantom_core_fn_method_phantomstream_send_reliable(void*_Nonnull ptr, RustBuffer data
);