tests/bindings/c/phantom_core.h

/* close() -> async void. */
uint64_t uniffi_phantom_core_fn_method_phantomsession_close(
    void                    *ptr);
/* close() -> async void. */
uint64_t uniffi_phantom_core_fn_method_phantomstream_close(
    void                    *ptr);