tests/bindings/phantom_core.py


_UniffiLib = _uniffi_load_indirect()
_UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK = ctypes.CFUNCTYPE(None,ctypes.c_uint64,ctypes.c_int8,
)
_UNIFFI_FOREIGN_FUTURE_FREE = ctypes.CFUNCTYPE(None,ctypes.c_uint64,
)
_UNIFFI_CALLBACK_INTERFACE_FREE = ctypes.CFUNCTYPE(None,ctypes.c_uint64,
)
class _UniffiForeignFuture(ctypes.Structure):
    _fields_ = [
        ("handle", ctypes.c_uint64),
        ("free", _UNIFFI_FOREIGN_FUTURE_FREE),
    ]
class _UniffiForeignFutureStructU8(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_uint8),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_U8 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructU8,
)
class _UniffiForeignFutureStructI8(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_int8),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_I8 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructI8,
)
class _UniffiForeignFutureStructU16(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_uint16),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_U16 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructU16,
)
class _UniffiForeignFutureStructI16(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_int16),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_I16 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructI16,
)
class _UniffiForeignFutureStructU32(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_uint32),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_U32 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructU32,
)
class _UniffiForeignFutureStructI32(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_int32),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_I32 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructI32,
)
class _UniffiForeignFutureStructU64(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_uint64),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_U64 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructU64,
)
class _UniffiForeignFutureStructI64(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_int64),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_I64 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructI64,
)
class _UniffiForeignFutureStructF32(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_float),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_F32 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructF32,
)
class _UniffiForeignFutureStructF64(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_double),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_F64 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructF64,
)
class _UniffiForeignFutureStructPointer(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_void_p),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_POINTER = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructPointer,
)
class _UniffiForeignFutureStructRustBuffer(ctypes.Structure):
    _fields_ = [
        ("return_value", _UniffiRustBuffer),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_RUST_BUFFER = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructRustBuffer,
)
class _UniffiForeignFutureStructVoid(ctypes.Structure):
    _fields_ = [
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_VOID = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructVoid,
)
_UniffiLib.uniffi_phantom_core_fn_clone_acceptoutcome.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_clone_acceptoutcome.restype = ctypes.c_void_p
_UniffiLib.uniffi_phantom_core_fn_free_acceptoutcome.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_free_acceptoutcome.restype = None
_UniffiLib.uniffi_phantom_core_fn_method_acceptoutcome_has_early_data.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_method_acceptoutcome_has_early_data.restype = ctypes.c_int8
_UniffiLib.uniffi_phantom_core_fn_method_acceptoutcome_session.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_method_acceptoutcome_session.restype = ctypes.c_void_p
_UniffiLib.uniffi_phantom_core_fn_method_acceptoutcome_take_early_data.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_method_acceptoutcome_take_early_data.restype = _UniffiRustBuffer
_UniffiLib.uniffi_phantom_core_fn_clone_phantomlistener.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_clone_phantomlistener.restype = ctypes.c_void_p
_UniffiLib.uniffi_phantom_core_fn_free_phantomlistener.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_free_phantomlistener.restype = None
_UniffiLib.uniffi_phantom_core_fn_constructor_phantomlistener_bind.argtypes = (
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_phantom_core_fn_constructor_phantomlistener_bind.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_core_fn_method_phantomlistener_accept.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomlistener_accept.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_core_fn_method_phantomlistener_is_shutting_down.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomlistener_is_shutting_down.restype = ctypes.c_int8
_UniffiLib.uniffi_phantom_core_fn_method_phantomlistener_local_addr.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomlistener_local_addr.restype = _UniffiRustBuffer
_UniffiLib.uniffi_phantom_core_fn_method_phantomlistener_metrics_prometheus_text.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomlistener_metrics_prometheus_text.restype = _UniffiRustBuffer
_UniffiLib.uniffi_phantom_core_fn_method_phantomlistener_shutdown.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomlistener_shutdown.restype = None
_UniffiLib.uniffi_phantom_core_fn_method_phantomlistener_verifying_key_bytes.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomlistener_verifying_key_bytes.restype = _UniffiRustBuffer
_UniffiLib.uniffi_phantom_core_fn_clone_phantomsession.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_clone_phantomsession.restype = ctypes.c_void_p
_UniffiLib.uniffi_phantom_core_fn_free_phantomsession.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_free_phantomsession.restype = None
_UniffiLib.uniffi_phantom_core_fn_constructor_phantomsession_connect.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_constructor_phantomsession_connect.restype = ctypes.c_void_p
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_close.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_close.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_connection_state.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_connection_state.restype = _UniffiRustBuffer
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_early_data_accepted.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_early_data_accepted.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_flush_queue.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_flush_queue.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_id.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_id.restype = _UniffiRustBuffer
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_is_data_ready.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_is_data_ready.restype = ctypes.c_int8
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_is_pqc_ready.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_is_pqc_ready.restype = ctypes.c_int8
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_open_stream.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_open_stream.restype = ctypes.c_void_p
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_peer_addr.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_peer_addr.restype = _UniffiRustBuffer
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_queued_count.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_queued_count.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_recv.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_recv.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_resumption_hint.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_resumption_hint.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_send.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_send.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_set_state.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomsession_set_state.restype = None
_UniffiLib.uniffi_phantom_core_fn_clone_phantomstream.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_clone_phantomstream.restype = ctypes.c_void_p
_UniffiLib.uniffi_phantom_core_fn_free_phantomstream.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_core_fn_free_phantomstream.restype = None
_UniffiLib.uniffi_phantom_core_fn_method_phantomstream_close.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomstream_close.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_core_fn_method_phantomstream_recv.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomstream_recv.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_core_fn_method_phantomstream_send_reliable.argtypes = (
    ctypes.c_void_p,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_phantom_core_fn_method_phantomstream_send_reliable.restype = ctypes.c_uint64
